# tinyML

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.toml  grammar.ebnf  out  tinyML.cabal
.github/workflows/: haskell.yml
examples/: ack.mn  bsmvp.mn  debug.mn  env.mn  fib.mn  gcd.mn  into_iterator.mn  iterator.mn  list.mn  miniml.mn  mvp.mn  notebook.mn  scratch.mn
examples/project_euler/: p5.mn  p6.mn
lib/base/: stream.mn
lib/std/collections/: list.mn  trie.mn  vector.mn
lib/std/ops/: arith.mn
src/: AST.hs  Common.hs  Compiler.hs  Config.hs  Core.hs  Infer.hs  Lexer.hs  Main.hs  NIR.hs  Node.hs  Parser.hs  Pipeline.hs  Pretty.hs  Rename.hs  Result.hs  Scheme.hs  Span.hs  Spanned.hs  TIR.hs  TMC.hs  Token.hs  TokenStream.hs  Ty.hs  Unique.hs
src/AST/: Def.hs  Expr.hs  Lit.hs
src/TMC/: AST.hs  Common.hs  Core.hs  Infer.hs  Lexer.hs  NIR.hs  Parser.hs  Pipeline.hs  Rename.hs  Scheme.hs  TIR.hs  Token.hs  Ty.hs
src/Typing/: Constraint.hs  Context.hs  Infer.hs  Scheme.hs  Solver.hs  Subst.hs  TIR.hs  Ty.hs  Types.hs
