cabal-version:      3.0
name:               tinyML
version:            0.1.0.0
synopsis:           The MiniML programming language
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris McDearman
maintainer:         mcdearmanchris@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror=missing-signatures -Werror=incomplete-patterns -Werror=incomplete-uni-patterns -Wno-unused-do-bind


executable tinyML
    import:           warnings
    main-is:          Main.hs
    other-modules: 
        Span
        Pretty
        Spanned
        Token
        TokenStream
        Lexer
        AST
        Parser
        NIR
        Rename

        Typing.Context
        Typing.Constraint
        Typing.Infer
        Typing.Scheme
        Typing.Solver
        Typing.TIR
        Typing.Ty
        Typing.Types

        Core
        Compiler
        Eval
        Unique
        Result
    default-extensions: 
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TupleSections
        TemplateHaskell
        TypeFamilies
        RecordWildCards
        GADTs
    build-depends:    
        base,
        megaparsec,
        parser-combinators,
        text,
        pretty-simple,
        array,
        haskeline,
        intern,
        containers,
        mtl,
        placeholder,
    hs-source-dirs:   src
    default-language: Haskell2010